# LookHub

./: .dockerignore.nginx  .env.example  .gitignore  DEPLOYMENT_PLAN.md  Dockerfile.flower  Dockerfile.nginx  README.md  backup.bat  docker-compose.prod.yaml  docker-compose.yaml  nginx.conf  nginx.prod.conf  restore.bat
LookHubWeb/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  env.example  pyproject.toml  requirements-test.txt
LookHubWeb/app/: config.py  main.py
LookHubWeb/app/admin/: router.py  security.py  utils.py
LookHubWeb/app/admin/templates/: base.html  clothes.html  clothes_detail.html  login.html  look_detail.html  looks.html
LookHubWeb/app/api/: dependencies.py  exception_handlers.py  router.py  schemas.py  security.py
LookHubWeb/app/api/routers/: clothes.py  looks.py  (+1 more)
LookHubWeb/app/application/: base_use_cases.py  exceptions.py  interfaces.py  use_cases.py  utils.py
LookHubWeb/app/frontend/: __init__.py  router.py
LookHubWeb/app/infrastructure/: database.py
LookHubWeb/docker/: app.sh  celery.sh
LookHubWeb/migrations/: env.py
LookHubWeb/migrations/versions/: ac6e910ac386_initial.py
LookHubWeb/tests/: README.md  conftest.py  test_domain_entities.py  test_use_cases.py  test_utils.py
SocialMediaPoster/: Dockerfile  README.md  env.example  pyproject.toml
SocialMediaPoster/docker/: app.sh
SocialMediaPoster/src/: config.py  interfaces.py  main.py  tasks.py
SocialMediaPoster/src/entities/: categories.py  clothes.py  enums.py  looks.py
SocialMediaPoster/src/services/: instagram.py  telegram.py  utils.py
(+32 files in other folders)
