[project]
name = "socialmediaposter"
version = "0.1.0"
description = ""
authors = [
    {name = "kibaidar1",email = "aidar1996@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis] (>=5.5.3,<6.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "instagrapi (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
